fixed FancyBox not showing above some elements (those with zindex higher than 90)
git-svn-id: https://plugins.svn.wordpress.org/fancybox-for-wordpress/trunk@136347 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/fancybox.css
+++ b/fancybox.css
@@ -64,7 +64,7 @@ div#fancy_outer {
 	position: absolute;
     top: 0;
     left: 0;
-    z-index: 90;
+    z-index: 9999;
     padding: 18px 18px 33px 18px;
     margin: 0;
     overflow: hidden;
